# rwa-program

./: Anchor.toml  Cargo.toml  README.md
cli/: Cargo.toml
programs/rwa-program/: Cargo.toml
programs/rwa-program/src/: lib.rs
programs/rwa-program/tests/: test_create_mint.rs
