[package]
name = "rwa-program"
version = "0.1.0"
edition = "2021"
description = "RWA Token CLI for Solana"
license = "MIT"
repository = "https://github.com/mishalturkane/rwa-program"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
anchor-client = "1.0.2"
solana-sdk = "3.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
